# haskell-webapp-testing-experimentation

./: .gitignore  .gitmodules  README.md  webapp-testing-experimentation.cabal
src/: Main.hs
src/WS/: App.hs  Cache.hs  DB.hs  Mail.hs  Types.hs
test/: Spec.hs
