name:                webapp-testing-experimentation
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/krdlab/haskell-webapp-testing-experimentation
license:             MIT
license-file:        LICENSE
author:              krdlab
maintainer:          krdlab@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag build-server
  default: True

library
  exposed-modules:     WS.App
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
      base >=4.7 && <5

executable server
  main-is:             Main.hs
  hs-source-dirs:      src/
  default-language:    Haskell2010
  if flag(build-server)
    build-depends:
        base >=4.7 && <5
      , webapp-testing-experimentation
  else
    buildable: False
