name:                webapp-testing-experimentation
version:             0.1.0.0
homepage:            https://github.com/krdlab/haskell-webapp-testing-experimentation
license:             MIT
license-file:        LICENSE
author:              krdlab
maintainer:          krdlab@gmail.com
copyright:           (c) 2015 krdlab
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      WS.App
    , WS.Cache
    , WS.DB
    , WS.Mail
    , WS.Types
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >=4.7 && <5
    , transformers
    , either
    , exceptions
    , bytestring
    , text
    , time
    , aeson
    , servant
    , servant-server
    , hedis
    , cereal
    , smtp-mail
    , template-haskell
    , names-th
    , persistable-record
    , relational-query
    , relational-query-HDBC
    , relational-record
    , HDBC
    , HDBC-session
    , HDBC-mysql >=0.6.6.2
    , HDBC-sqlite3

executable server
  main-is:             Main.hs
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
      base >=4.7 && <5
    , servant-server
    , wai
    , warp
    , webapp-testing-experimentation
    , transformers
    , either
    , exceptions
    , bytestring
    , text
    , time
    , aeson
    , hedis
    , cereal
    , smtp-mail
    , template-haskell
    , names-th
    , persistable-record
    , relational-query
    , relational-query-HDBC
    , relational-record
    , HDBC
    , HDBC-session
    , HDBC-mysql >=0.6.6.2
    , HDBC-sqlite3
